Various doc updates

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -66,3 +66,11 @@
   year =      {2018},
   note =      {accessed 2018-10-26},
 }
+
+@Misc{ects,
+  author = {{Hochschulrat}},
+  title = {{Richtlinien des Hochschulrates für die koordinierte Erneuerung der Lehre an den universitären Hochschulen der Schweiz im Rahmen des Bologna-Prozesses}},
+  howpublished = {\url{https://www.admin.ch/opc/de/classified-compilation/20150869/index.html}},
+  year = {2015},
+  note = {accessed 2018-11-12},
+}
