--- a/doc/main.tex
+++ b/doc/main.tex
@@ -86,7 +86,7 @@ Date: {\today}
 
 
 % Aufgabenstellung
-\chapter*{Task Definition}  
+\chapter*{Task Definition}
 
 % Technischer Bericht
 \part{Technical Report}
@@ -186,6 +186,7 @@ should be refactored to use better alternatives such as constructor arguments
 
 % Rahmenbedingungen, Umfeld, Definitionen, Abgrenzungen
 \section{Context}
+\label{context}
 
 The software and version constraints are mostly given by the existing project:
 
@@ -199,7 +200,7 @@ The software and version constraints are mostly given by the existing project:
 
 As qutebrowser is a pre-existing project with a vibrant community, external
 contributions are expected to continue (despite an
-announcement\footnote{\url{https://lists.schokokeks.org/pipermail/qutebrowser-announce/2018-October/000053.html}}
+announcement\footnote{\url{https://lists.schokokeks.org/pipermail/qutebrowser-announce/2018-October/000053.html}, accessed 2018-11-12}
 asking people to refrain from making larger contributions). This can be challenging,
 as it results in refactorings being carried out against a moving target. Because
 of the nature of open-source contributions,
@@ -251,11 +252,11 @@ in Mozilla's blog post \citep{mozilla-webext} were as follows:
     compatible with the changes necessary for Electrolysis. This forced either
     the add-on developer to make (sometimes intricate) changes to their code; or
     the user's Firefox instance to run in a special fallback mode: \emph{``Add-ons
-    that haven’t been upgraded to work with Electrolysis will run in a special
+    that haven't been upgraded to work with Electrolysis will run in a special
     compatibility environment that resembles single-process Firefox as much as
     possible. [...] However, [the fallback is] much slower than the equivalent DOM
     operations in single-process Firefox, and can affect the user experience
-    negatively. Also, some accesses aren’t supported by the compatibility layer and
+    negatively. Also, some accesses aren't supported by the compatibility layer and
     will throw exceptions.''}
   \item Since Firefox is a quite popular product, malicious Firefox addons
     started to become an attractive attack vector for bad actors. With legacy
@@ -273,15 +274,16 @@ in Mozilla's blog post \citep{mozilla-webext} were as follows:
     been merged into Firefox.} or browser.html\footnote{A Mozilla research
     project which implements a browser completely in HTML, now retired.}
     as part of Firefox. The tight coupling between the browser and its add-ons
-    also creates shorter-term problems for Firefox development. It’s not uncommon
+    also creates shorter-term problems for Firefox development. It's not uncommon
     for Firefox development to be delayed because of broken add-ons.''}
 \end{itemize}
 
 While qutebrowser should learn from the mistakes made in Firefox' legacy API,
-there is a fundamental difference in the two approaches: qutebrowser plugins
-should be written in the Python language (like qutebrowser itself is), but
-safely executing untrusted Python code proved to be impossible
-\citep{nedbat-eval, lwn-pysandbox}. \fixme{separate security chapter?}
+there is a fundamental difference in the two approaches regarding their security
+philosophy: Extensions for qutebrowser should be written in the Python language
+(like qutebrowser itself is), but safely executing untrusted Python code proved
+to be impossible \citep{nedbat-eval, lwn-pysandbox}. See chapter \ref{security}
+for a more detailed explanation.
 
 A more thorough analysis of the XUL API design proved to be difficult. While
 archived API documentation is still
@@ -316,7 +318,7 @@ reasons:
   \item Full WebExtension support would likely require some degree of support by
     the underlying rendering engine. While there is an open
     suggestion\footnote{\url{https://bugreports.qt.io/browse/QTBUG-61676}} in
-    Qt's bugtracker, no work on that has been started so far.
+    Qt's bug tracker, no work on that has been started so far.
   \item Implementing WebExtension support in Python only (without any support
     from the underlying backend) is hard, if possible at all. Neither
     backend allows deep access to its JavaScript engine
@@ -870,14 +872,27 @@ def set_html(html: str, base_url: QUrl)
   \label{tabapi}
 \end{figure}
 
-% Bestehende Lösungsansätze und Normen
-%\section{Existing APIs}
+\section{Other inspirations}
+Various other existing projects served as an inspiration for qutebrowser's
+plugin API:
 
-% Kurzbeschreibung und Charakterisierung
-% \section{Summary and Characerization}
-
-% Defizite (Hinweise auf Weiterentwicklungs-, bzw. Verbesserungspotential)
-%\section{Problems with existing solutions}  
+\begin{itemize}
+  \item The pytest project\footnote{\url{https://www.pytest.org/}} exposes a
+    very simple and ``pythonic'' plugin API. All that's needed to create a
+    plugin is a specially named Python file which implements hook functions such
+    as \py{def pytest_runtest_setup(item)}. However, giving trainings about
+    pytest in companies, the author of this SA has noticed that some aspects of
+    its plugin API are somewhat unintuitive. As an example, both the function
+    name and the argument names (\verb|item|) need to match the definition.
+    While some of its design decisions make sense, others should be solved
+    differently in qutebrowser.
+  \item The odoo project\footnote{\url{https://www.odoo.com/}} also follows the
+    philosophy of having a small core which is extended with modules (some of
+    which are shipped with the core). From some prior work experience, this SA's
+    author has worked with odoo modules in the past -- unfortunately, the API
+    for modules is complex and badly documented. Thus, odoo is mainly useful as
+    a conceptual inspiration rather than an inspiration for API design.
+\end{itemize}
 
 % Bewertung (Evaluation)
 \chapter{Evaluation}
@@ -947,7 +962,10 @@ callback-based API.
 \section{Summary}
 
 % z.T. Wiederholung im Groben, z.T. Verweise auf Teil II-Kapitel
-\section{...}
+\section{Security}
+\label{security}
+
+
 
 
 % Resultate, Bewerung und Ausblick
@@ -963,11 +981,34 @@ callback-based API.
 \section{Personal Review}
 
 % Dank
-\section{Thanks}
+\section{Acknowledgements}
+Working on an open-source project with an idea contributed by a student, as well
+as doing an SA as a single person, is rather untypical. I'm very grateful that
+Prof.~Stefan~Keller was open to mentor this project as an advisor despite the
+unusual conditions. His support and insights in our regular meetings were
+invaluable.
 
+Thanks to the qutebrowser community for making qutebrowser into far more than
+just a personal pet project of mine. Without this community, I doubt I would
+still be working on it after five years -- when I started, I never imagined that
+it would get that far.
 
+I'm thankful towards all qutebrowser contributors for their patience and
+understanding when I couldn't attend to their contributions in a timely manner
+while working on this project. I'd especially like to thank Fritz~Reichwald for
+his contributions towards switching to the Sphinx documentation generator, and
+our careful coordination in order to not interfere with my own work on this
+project.
 
-% Teil II SW-Projektdokumentation ("klassisches" RUP 2/HSR)  
+Thanks to AnneMarie~O'Neill for her careful English reviews and constructive
+feedback on possible improvements. Her suggestions always were very welcome and
+accurate.
+
+Last but not least, thanks to Méline~Sieber for her constant encouragement
+throughout the semester, and for always helping me out of the maze when I got
+stuck somewhere.
+
+% Teil II SW-Projektdokumentation ("klassisches" RUP 2/HSR)
 \part{Project Documentation}
 
 \chapter{Introduction}
@@ -1103,13 +1144,46 @@ extension API:
 \chapter{Project Management}
 
 % Prototypen, Releases, Meilensteine
-\section{Prototypes, Releases, Milestone}
+\section{Prototypes, Releases, Milestones}
+Since this project is done without any external industry partner, there is no
+immediate need for fixed releases or prototypes during the SA.
+
+However, the following releases are planned:
+
+\begin{itemize}
+  \item A v1.5.0 feature release as soon as PyQt 5.11.3 is released upstream
+    \begin{itemize}
+      \item v1.5.0 was released in week 3
+    \end{itemize}
+  \item Patch releases for v1.5.x as needed in case of regressions or serious
+    enough bugs:
+    \begin{itemize}
+      \item v1.5.1 was released in week 4
+      \item v1.5.2 in week 6
+      \item v1.5.3 in week \fixme{}
+    \end{itemize}
+  \item v1.6.0 after the work on refactoring qutebrowser's core into extensions
+    is completed, in order to get the changes out to users as soon as possible.
+  \item v1.6.x patch releases as needed (probably after the SA is finished)
+  \item In the future, after the extension API is open for third-party plugins,
+    a v2.0.0 release with some other big changes (like dropping support for the
+    older QtWebKit backend, as it's rarely updated upstream, even for security
+    issues).
+\end{itemize}
+
+At the end of week 11, an API review milestone is planned, where the extension
+API design gets reviewed by employees of the IFS (Institute for Software) at the
+HSR.
 
 % Team, Rollen und Verantwortlichkeiten
 \section{Team and Roles}
 \emph{Florian Bruhin} is both the primary maintainer of qutebrowser and the
-author of this student research project. He has been working on qutebrowser since
+sole author of this student research project. He has been working on qutebrowser since
 December 2013 and started studying Computer Science at HSR in 2016.
+
+\emph{Joël Schwab} intended to co-author this research project, but
+unfortunately didn't pass some exams, which were a precondition to be allowed to
+do the SA project this semester.
 
 Professor \emph{Stefan Keller}, institute partner at the Institute for Software
 (IFS) at HSR is the advisor for this project.
@@ -1118,6 +1192,7 @@ The qutebrowser community is not directly involved in this research project, but
 is the primary audience of the resulting work. It has also contributed many
 ideas and use cases for future
 plugins\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/30}}.
+There's no external industry partner.
 
 \label{fiete}
 \emph{Fritz Reichwald} (fiete201\footnote{\url{https://github.com/fiete201}})
@@ -1133,7 +1208,7 @@ documentation.
 
 % Prozessmodel
 \section{Process Model}
-\fixme{Move this before ``Project Schedule''?}
+\fixme{Is it okay to move this before ``Project Schedule''?}
 
 Because of previous experience as part of HSR's ``Engineering Project'', the
 ``Scrum+'' process model will be used, i.e., an agile Scrum process with an
@@ -1148,74 +1223,90 @@ Inception, Preparation, Elaboration, Construction, Transition
 
 % Aufwandschätzung, Zeitplan, Projektplan
 \section{Project Schedule}
-\strut
+\label{schedule}
+
+8 ECTS credits are awarded for the SA-course. Since one ECTS point is equivalent
+to a workload of 25--30 hours \citep{ects} and this SA is written by a single
+author, this amounts to 200--240 hours of work. The semester consists of 14
+weeks, thus, an average workload of 14--17 hours per week is expected. This time
+is allotted as shown in figure \ref{img:schedule}.
+
 \begin{figure}[h!]
-\begin{ganttchart}[
-      title height = 1,
-      y unit title=.5cm,
-      y unit chart=.5cm,
-      bar/.append style={fill=green!20},
-      vgrid={
-        *1{blue!60},
-        *4{gray, dashed},
-        *1{blue!60},
-        *2{gray, dashed},
-        *1{blue!60},
-        *2{gray, dashed},
-        *1{gray, dashed}
-      }]{1}{14}
-  \gantttitle{\hspace{-6.5em}\footnotesize{Calendar week}}{0}{0}
-  \gantttitlelist{38,...,51}{1} \\
-  \gantttitle{\hspace{-6.5em}\footnotesize{Semester week}}{0}{0}
-  \gantttitlelist{1,...,14}{1} \\
+  \begin{ganttchart}[
+        title height = 1,
+        y unit title=.5cm,
+        y unit chart=.5cm,
+        bar/.append style={fill=green!20},
+        vgrid={
+          *1{blue!60},
+          *4{gray, dashed},
+          *1{blue!60},
+          *2{gray, dashed},
+          *1{blue!60},
+          *2{gray, dashed},
+          *1{gray, dashed}
+        }]{1}{14}
+    \gantttitle{\hspace{-6.5em}\footnotesize{Calendar week}}{0}{0}
+    \gantttitlelist{38,...,51}{1} \\
+    \gantttitle{\hspace{-6.5em}\footnotesize{Semester week}}{0}{0}
+    \gantttitlelist{1,...,14}{1} \\
 
-  \ganttgroup{Inception}{1}{1} \\
-  \ganttmilestone{M0: Kickoff}{1} \\
+    \ganttgroup{Inception}{1}{1} \\
+    \ganttmilestone{M0: Kickoff}{1} \\
 
-  \ganttgroup{Preparation}{2}{6} \\
-  \ganttbar{Qt 5.12 release}{2}{2} \\
-  \ganttbar{Merge contributions}{3}{5} \\
-  \ganttbar{Buffer}{6}{6} \\
+    \ganttgroup{Preparation}{2}{6} \\
+    \ganttbar{Qt 5.12 release}{2}{2} \\
+    \ganttbar{Merge contributions}{3}{5} \\
+    \ganttbar{Buffer}{6}{6} \\
 
-  \ganttmilestone{M1: Most contributions addressed}{6} \\
+    \ganttmilestone{M1: Most contributions addressed}{6} \\
 
-  \ganttgroup{Elaboration}{7}{9} \\
-  \ganttbar{Existing approaches}{7}{7} \\
-  \ganttbar{Project documentation}{8}{8} \\
-  \ganttbar{API design}{9}{9} \\
+    \ganttgroup{Elaboration}{7}{9} \\
+    \ganttbar{Existing approaches}{7}{7} \\
+    \ganttbar{Project documentation}{8}{8} \\
+    \ganttbar{API design}{9}{9} \\
 
-  \ganttgroup{Construction}{10}{13} \\
-  \ganttbar{Introducing MyPy}{10}{10} \\
-  \ganttbar{Adding extension API}{11}{12} \\
-  \ganttmilestone{M2: API review}{11} \\
-  \ganttbar{Refactoring core into extensions}{11}{12} \\
-  \ganttbar{Buffer}{13}{13} \\
+    \ganttgroup{Construction}{10}{13} \\
+    \ganttbar{Introducing MyPy}{10}{10} \\
+    \ganttbar{Adding extension API}{11}{12} \\
+    \ganttmilestone{M2: API review}{11} \\
+    \ganttbar{Refactoring core into extensions}{11}{12} \\
+    \ganttmilestone{M3: v1.6.0 release}{12} \\
+    \ganttbar{Buffer}{13}{13} \\
 
-  \ganttgroup{Transition}{14}{14} \\
-  \ganttbar{Finishing documentation}{14}{14} \\
+    \ganttgroup{Transition}{14}{14} \\
+    \ganttbar{Finishing documentation}{14}{14} \\
 
-  \ganttmilestone{M3: Project end}{14}
-\end{ganttchart}
-
-\caption{Project schedule}
+    \ganttmilestone{M4: Project end}{14}
+  \end{ganttchart}
+  \caption{Project schedule}
+  \label{img:schedule}
 \end{figure}
+
+Due to the relatively long \emph{preparation} phase at the beginning of the
+project, the \emph{construction} phase gets unusually short. This is
+unfortunate but unavoidable -- it's important to integrate existing
+contributions before starting to refactor the existing code, at least for
+third-party changes which would lead to conflicts with refactoring changes.
 
 % Risiken
 \section{Risks}
 The following risks have been identified in this project:
 
 \begin{table}[h!]
-  \begin{tabulary}{\linewidth}{LLl}
+  \begin{tabulary}{\linewidth}{LLL}
     \toprule
-    Risk & Mitigation & Probability (1-6) \\
+    Risk & Mitigation & Probability (1-5) \\
     \midrule
-    Too many external contributions & Asking contributors to hold back further contributions; ignoring existing contributions & 6 \\
+    Too many external contributions & Asking contributors to hold back further contributions; ignoring existing contributions & 5 \\
     \hline
-    Not enough time in construction phase & Work on extension API is very
-    scalable & 5 \\
+    Little time in construction phase & Work on extension API is very
+    scalable, buffers in schedule & 4 \\
+    \hline
+    Sickness of author & Work on extension API is very scalable & 3 \\
     \hline
     Future breaking API changes needed & API is not exposed for third-party
-    contributions yet & 4 \\
+    contributions yet & 3 \\
     \hline
     Migrating documentation toolchain to Sphinx (done by external contributor)
     is not done in time & Initial plugin API documentation can be separate from
@@ -1223,6 +1314,31 @@ The following risks have been identified in this project:
     \bottomrule
   \end{tabulary}
 \end{table}
+
+As explained in section \ref{context}, it's expected that third-party
+contributors continue to submit changes (in the form of pull requests) while
+this SA is ongoing. An
+announcement\footnote{\url{https://lists.schokokeks.org/pipermail/qutebrowser-announce/2018-October/000053.html},
+  accessed 2018-11-12} was sent out, asking contributors to cut back external
+contributions. However, a similar announcement was sent out during past exam
+seasons, with mixed results -- many contributors continue to submit changes
+regardless. Initially, there's a phase focused on merging existing
+contributions (see the project schedule in section \ref{schedule}). Afterwards,
+contributions are dealt with on a best effort basis, being ignored if they
+are non-trivial.
+
+There's little time in the construction phase compared to other projects.
+Additionally, this SA is written by a single author. Thus, sickness or other
+obstructions have a bigger than usual impact. This is counteracted by trying to
+keep the scope of the SA clear, but flexible. Additionally, buffer time is
+added after the preparation and construction phases in the project schedule
+(section \ref{schedule}).
+
+If some preparatory work isn't finished fully, it's possible that upcoming
+changes cause incompatible changes in the extension API. However, this SA
+is focused on moving core code into extensions, rather than providing an
+extension API for third-party extensions. Therefore, it's still possible to do
+those changes after the SA is finished, without breaking third-party code.
 
 % Projektmonitoring (Ist-Beschreibung, so ist es passiert)
 \chapter{Project Monitoring}
@@ -1242,17 +1358,39 @@ The following risks have been identified in this project:
 
 \chapter{Glossary and Abbreviations}
 \begin{description}
-  \item[API]{\fixme{}}
-  \item[plugin]{\fixme{}}
-  \item[extension]{\fixme{}}
-  \item[W3C]{\fixme{}}
-  \item[DOM]{Document Object Model \fixme{}}
-  \item[Qt]{\fixme{}}
-  \item[QtWebKit]{\fixme{}}
-  \item[QtWebEngine]{\fixme{}}
-  \item[backend]{\fixme{}}
-  \item[SA]{\fixme{}}
-  \item[CI]{\fixme{}}
+  \item[API]{Application Programming Interface, i.e., in
+      case of an extension API, the functions and classes (names, arguments,
+      etc.) an extension can implement.}
+  \item[add-on]{A synonym for \emph{extension}.}
+  \item[backend]{The software library doing the ``heavy lifting'' in
+      qutebrowser, such as doing network requests or drawing website content.}
+  \item[CI]{Continuous integration, i.e., running automated tests or other
+      checks with every change.}
+  \item[DOM]{Document Object Model, the \emph{API} to access a HTML document as
+      a tree structure.}
+  \item[extension]{Code using an \emph{API} in order to extend the functionality
+      of an existing project.}
+  \item[GUI]{Graphical User Interface}
+  \item[HSR]{The Hochschule für Technik (University of Applied Sciences) in
+      Rapperswil, Switzerland.}
+  \item[IFS]{The Institute for Software at \emph{HSR}.}
+  \item[plugin]{In most contexts, the same as an \emph{extension}. Note that
+      qutebrowser initially used \emph{plugin API} to refer to its extension
+      API. However, this should be avoided, as ``plugin'' is too ambiguous in
+      the context of web browsers: A plugin usually refers to software using the
+      deprecated NPAPI (Netscape Plugin API) or PPAPI (Pepper Plugin API)
+      technologies, such as Adobe Flash.}
+  \item[Python]{The programming language used to write qutebrowser.}
+  \item[PyQt]{A software library which allows to use \emph{Qt} from \emph{Python}.}
+  \item[Qt]{The \emph{GUI} library used by qutebrowser}
+  \item[QtWebEngine]{The \emph{backend} used by default in qutebrowser, based on
+      the Chromium project (like the Chrome web browser).}
+  \item[QtWebKit]{One of two possible \emph{backends} qutebrowser can use.
+      QtWebKit is the older backend, which isn't used by default anymore, but is
+      still supported.}
+  \item[SA]{Studienarbeit (Student research project)}
+  \item[W3C]{World Wide Web Consortium, the standards body for web-related
+      technologies such as HTML.}
 \end{description}
 
 \nocite{yapproach}
