--- a/meetings/2018-11-13.md
+++ b/meetings/2018-11-13.md
@@ -36,3 +36,8 @@
 - Projektplan so okay?
 - Projektdoku-Aufbau: Wie mit Duplizierung umgehen?
 - Machen use cases / Systemsequenzdiagramme überhaupt Sinn?
+
+# Notizen
+
+- "Form follows function": Ev. zwei Teile in einen vereinen
+- Plugin-Idee: Nach öffnungszeiten suchen, Vorschlag in den paste-buffer oder als Dialog.
