--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1071,7 +1071,7 @@ extension API:
   \item[Security] The security model used for qutebrowser extensions assumes
     that extensions are trusted, i.e., may run arbitrary code. See
     section \ref{security} for a more detailed explanation.
-  \item[Simplicity] It should be trivial for an user to extend her qutebrowser
+  \item[Simplicity] It should be trivial for a user to extend her qutebrowser
     setup with a custom extension. Thus, getting started with writing a
     third-party extension should be as straightforward as possible, without
     requiring packing multiple files into a custom format. Also see section
